# workz

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  git.rs  isolation.rs  main.rs  mcp.rs  serve.rs  sync.rs
